main overflow-x fixed

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -2,6 +2,7 @@ main{
     height: 85vh;
     display: flex;
     justify-content: center;
+    overflow-x: hidden;
 
     .container{
         flex: 1;
